# Caire-AI

./: README.md  merged_data.csv  pyproject.toml
models/: cnn_model.pth  final_model.pth  final_model_10k.pth
results/: predicted_bmi.csv  predicted_bmi_least_squares.csv
src/: align.py  least_squares.py  model.py  predict.py  shallow_model.py  train.py  train_shallow_model.py
src/data/: dataloader.py  dataloader_shallow_model.py  prepare_dataset.py
