[tool.poetry]
name = "caire"
version = "0.1.0"
description = ""
authors = ["harshmunshi <harshmunshi03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
black = "^24.10.0"
isort = "^5.13.2"
llvmlite = "^0.43.0"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
tensorboard = "^2.18.0"
tqdm = "^4.66.6"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
